# mro-analytics

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  aCMakeLists.bk.txt
docs/html/: abc__ved_8cpp.html  abc__ved_8cpp.js  abc__ved_8cpp__incl.dot  adjusted__boxplot_8cpp.html  adjusted__boxplot_8cpp.js  adjusted__boxplot_8cpp__incl.dot  annotated.html  annotated_dup.js  backcasting_8cpp.html  backcasting_8cpp.js  backcasting_8cpp__incl.dot  classes.html  classic__ad__hoc_8cpp.html  classic__ad__hoc_8cpp.js  classic__ad__hoc_8cpp__incl.dot  croston_8cpp.html  croston_8cpp.js  croston_8cpp__incl.dot  demand__stats_8hpp.html  demand__stats_8hpp.js  demand__stats_8hpp__dep__incl.dot  demand__stats_8hpp__incl.dot  demand__stats_8hpp_source.html  dir_000001_000002.html  dir_2db4a936fe8a09aa38a77f4963f92275.html  dir_2db4a936fe8a09aa38a77f4963f92275.js  dir_2db4a936fe8a09aa38a77f4963f92275_dep.dot  dir_49eb4493dd946b3f948eb347b84c8b3e.html  dir_49eb4493dd946b3f948eb347b84c8b3e.js  dir_49eb4493dd946b3f948eb347b84c8b3e_dep.dot  dir_4e915715b3a82baafd590bbd135ded06.html  dir_4e915715b3a82baafd590bbd135ded06.js  dir_4e915715b3a82baafd590bbd135ded06_dep.dot  dir_571e46fb7a026d798f2503a43bcace96.html  dir_571e46fb7a026d798f2503a43bcace96.js  dir_571e46fb7a026d798f2503a43bcace96_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_73af0df8cc14a556e83c2a1d13d8b950.html  (+118 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_c.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+2 more)
include/mro/calibration/: mad.hpp  mase.hpp  mse.hpp
include/mro/classification/: abc_ved.hpp  eaves.hpp  williams.hpp
include/mro/metrics/: performance_metrics.hpp
include/mro/preprocessing/: adjusted_boxplot.hpp  negative_binomial_overdispersion.hpp
src/calibration/: mad.cpp  mase.cpp  mse.cpp
src/classification/: abc_ved.cpp  eaves.cpp  syntetos_boylan.cpp  williams.cpp
src/classification/detail/: demand_stats.hpp
src/metrics/: performance_metrics.cpp
src/preprocessing/: adjusted_boxplot.cpp  negative_binomial_overdispersion.cpp
tests/: CMakeLists.txt  test_classic_ad_hoc.cpp  test_croston.cpp  test_croston_professor_example.cpp  test_moments.cpp
(+34 files in other folders)
